src/test/resources/valid/group/GROUP.cpy
       01 EMP-RECORD.
           05 EMP-NAME PIC 99.