src/test/resources/invalid/alpha/ALPHAINV.cpy
       01 EMP-RECORD.
           05 EMP-NAME PIC 99.
           05 EMP-SURNAME PIC X(2).
           05 EMP-POSITION PIC X.